[project]
name = "openenv-support"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"